--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-2 col-md-3 col-sm-5">
                     <div class="logo">
-                        <a href="{{site.url}}"><img src="{{site.logo}}" class="img-fluid" alt="{{site.title}}"></a><b>GlanceCam</b>
+                        <a href="{{site.url}}"><img src="https://cdf1982.com/glancecam-mediakit/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b>GlanceCam</b>
                     </div>
                 </div>
                 <div class="col-xl-8 col-lg-9 text-right">
