Fixes to sentence for spacing

--- a/_includes/future-and-contacts.html
+++ b/_includes/future-and-contacts.html
@@ -28,12 +28,12 @@
 						<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog</a><br>
                     </p>
                 </div>
-				<br><br><br>
+				<br><br>
                 <div class="section-title">
                     <h2>Contact informations</h2>
                 </div>
 				<p>
-					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>, which you should really follow because we don't have nearly enough Huskies in our lives.<br><br><b>I'd love to hear from you and to provide any detail missing here, and I'd love even more to read what you think about my app in your publication 😉!</b>
+					You can contact me, Cesare, via email at <a href="mailto:support@cdf1982.com">support@cdf1982.com</a> or on Twitter <a href="https://twitter.com/cdf1982">@cdf1982.com</a>. And of course Milla has her own <a href="https://www.instagram.com/millakillapilla/">Instagram page</a>.<br><br><b>I'd love to hear from you and to provide any detail missing here, and I'd love even more to read what you think about my app in your publication 😉!</b>
 				</p>
             </div>
             
