Multiple fixes for mobile

--- a/_includes/future-and-contacts.html
+++ b/_includes/future-and-contacts.html
@@ -7,19 +7,19 @@
                 </div>
                 <div class="about-content">
                     <p>
-						GlanceCam currently runs great on Apple Silicon thanks to Rosetta, but a <b>native M1 version is in the works</b> and will launch as soon as the underlying video engine – VLCKit, which powers the famous VLC Media Player – will officially support M1 (work on this is ongoing, and progressing well, as of March 2021).<br><br><b>GlanceCam 3 establishes the foundations for lots of exciting future improvements</b>, such as Onvif for auto-detecting cameras (thus removing the need of manually researching and typing in strings for most models), HomeKit cameras support, new view modes such as a single window with a fluid grid and much more.<br>These are all complex features that require some serious work, hence the addition of the new GlanceCam Pro tier to allow Users who really love the app to help support its future development; the plan is for the next 3 years to see even more than the 20 free updates GlanceCam already received in the first 3.<br><br>It is also possible that, when the Mac app will have everything that's needed and a bit more, GlanceCam will move to other platforms, namely iOS, iPadOS and tvOS, but let's not get ahead of ourself: GlanceCam is first and foremost a macOS app, and tries really hard to be the best at that.
+						GlanceCam currently runs great on Apple Silicon thanks to Rosetta, but a <b>native M1 version is in the works</b> and will launch as soon as the underlying video engine – VLCKit, which powers the famous VLC Media Player – will officially support M1 (work on this is ongoing, and progressing well, as of March 2021).<br><br><b>GlanceCam 3 establishes the foundations for lots of exciting future improvements</b>, such as Onvif for auto-detecting cameras (thus removing the need of manually researching and typing in strings for most models), HomeKit cameras support, new view modes such as a single window with a fluid grid and much more.<br>These are all complex features that require some serious work, hence the addition of the new GlanceCam Pro tier to allow Users who really love the app to help support its future development; the plan is for the next 3 years to see even more than the 20 free updates GlanceCam already received in the first 3.<br><br>It is also possible that, when the Mac app will have everything that's needed and a bit more, GlanceCam will move to other platforms, namely iOS, iPadOS and tvOS, but let's not get ahead of ourself: GlanceCam is first and foremost a macOS app, and tries really hard to be the best at that.<br><br>
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 mb-20">
                 <div class="section-title">
-                    <h2>Links</h2>
+                    <h2>Links and downloads</h2>
                 </div>
                 <div class="about-content">
                     <p>
 						<a href="#">Download GlanceCam test version for the Press</a><br>
-						<a href="#">Download Press assets and informations</a><br>
-						<a href="https://www.youtube.com/watch?v=sTU72gGfhJo">GlanceCam App Store video on YouTube</a><br><br>
+						<a href="#">Download Press assets and informations</a><br><br>
+						<a href="https://www.youtube.com/watch?v=sTU72gGfhJo">GlanceCam App Store video on YouTube</a><br>
 						<a href="https://vimeo.com/517800053">GlanceCam App Store video on Vimeo</a><br><br>
 						
 						<a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896">GlanceCam 2.10 in the Mac App Store</a><br>
