--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -5,9 +5,8 @@
                 <div class="call-to-action white-text">
                     <h3>See GlanceCam in action, even if you don't own an IP camera:<br>the Press version embeds videos that make testing a breeze.</h3>
                     <div class="call-to-action">
-                        <a href="#" class="btn">download test version</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://vimeo.com/517800053" class="btn video-view">watch app store video</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="#" class="btn">download press assets</a>
+                        <a href="#" class="btn">download press version</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="https://vimeo.com/517800053" class="btn video-view">&nbsp;&nbsp;&nbsp;&nbsp;watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
 					
                 </div>
