--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -7,9 +7,8 @@
                         <div class="slider-content">
                             <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>March 2021 <span>Media Kit</span></h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;Download test version for the press&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Watch Video&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download Press assets & informations</a>
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         </div>
                     </div>
                 </div>
@@ -22,8 +21,8 @@
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM 3<br>with <span>multi-windows</span></h1>
 							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, cameras so much nicer.</p>
-                        <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;Download test version for the press&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download Press assets & informations</a>
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         </div>
                     </div>
                 </div>
@@ -36,8 +35,8 @@
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br> to stream <span>IP cameras</span></h1>
 							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam supports most IP cameras, because it works with RTSP, HTTP(s) and RTMP, and makes bad web apps a nightmare from the past.</p>
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;Download test version for the press&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download Press assets & informations</a>
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         </div>
                     </div>
                 </div>
