--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -3,13 +3,16 @@
         <div class="single-slider slider-bg d-flex align-items-center" style="background-image:url({{site.baseurl}}/assets/img/slider/slider1.jpg)">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12">
+                    <div class="col-xl-10">
                         <div class="slider-content">
                             <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>March 2021 <span>Media Kit</span></h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
+							<div class="call-to-action white-text">
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch 30s launch video</a>
                         </div>
+						</div>
                     </div>
                 </div>
             </div>
@@ -20,7 +23,7 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM 3<br>with <span>multi-windows</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, cameras so much nicer.</p>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer.</p>
                             <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
                         </div>
