Test shorter button captions

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -8,9 +8,9 @@
                             <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>March 2021 <span>Media Kit</span></h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch 30s launch video</a>
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
                         </div>
 						</div>
                     </div>
