Multiple tweaks for mobile

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -3,12 +3,11 @@
         <div class="row">
             <div class="col-xl-12 text-center">
                 <div class="call-to-action white-text">
-                    <h3>See GlanceCam in action, even if you don't own an IP camera:<br>the Press version embeds videos that make testing a breeze.</h3>
+                    <h3>See GlanceCam in action, even if you don't own an IP camera:<br>this Press version embeds sample videos, making testing fast</h3>
                     <div class="call-to-action">
-                        <a href="#" class="btn">download press version</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://vimeo.com/517800053" class="btn video-view">&nbsp;&nbsp;&nbsp;&nbsp;watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="#" class="btn">download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="https://vimeo.com/517800053" class="btn video-view">&nbsp;watch video&nbsp;</a>
                     </div>
-					
                 </div>
             </div>
         </div>
