--- a/_includes/portfolios_2.html
+++ b/_includes/portfolios_2.html
@@ -5,7 +5,7 @@
                 <div class="col-xl-12 text-center pb-40 ">
                     <div class="section-title service-title">
                         <h2>Screenshots</h2>
-                        <p><ul>All images are also available in the <a href="#">Press assets download</a>.</ul></p>
+                        <p><ul>All images are also available in <a href="#">this zip file</a></ul></p>
                     </div>
                 </div>
             </div>
