--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -3,14 +3,16 @@
         <div class="single-slider slider-bg d-flex align-items-center" style="background-image:url({{site.baseurl}}/assets/img/slider/slider1.jpg)">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-10">
+                    <div class="col-xl-12">
                         <div class="slider-content">
                             <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>March 2021 <span>Media Kit</span></h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
+							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
                             <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+						</div>
                         </div>
 						</div>
                     </div>
