--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,18 +2,10 @@
     <div id="sticky-header" class="menu-area">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-3 col-lg-2 col-md-3 col-sm-5">
+                <div class="col-xl-12 col-lg-2 col-md-3 col-sm-5">
                     <div class="logo">
-                        <a href="{{site.url}}"><img src="https://cdf1982.com/glancecam-mediakit/assets/img/logo/logo.png" class="img-fluid" alt=""></a>
+                        <a href="{{site.url}}"><img src="https://cdf1982.com/glancecam-mediakit/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b> GlanceCam</b> Media Kit
                     </div>
-                </div>
-                <div class="col-xl-8 col-lg-9 text-right">
-                    <div class="main-menu">
-                      <b>GlanceCam</b> Media Kit
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="mobile-menu"></div>
                 </div>
             </div>
             <div class="offcanvas-menu">
