Tweaks to slider

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>March 2021 <span>Media Kit</span></h1>
+                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>Pre-launch <span>Media Kit</span></h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
@@ -26,8 +26,13 @@
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM 3<br>with <span>multi-windows</span></h1>
 							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer.</p>
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
+							<div class="col-xl-12 text-center">
+							<div class="call-to-action white-text">
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+						</div>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -40,8 +45,14 @@
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br> to stream <span>IP cameras</span></h1>
 							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam supports most IP cameras, because it works with RTSP, HTTP(s) and RTMP, and makes bad web apps a nightmare from the past.</p>
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download press version </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;&nbsp;&nbsp;&nbsp;Watch launch video&nbsp;&nbsp;&nbsp;&nbsp;</a>
+								<div class="col-xl-12 text-center">
+								<div class="call-to-action white-text">
+	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						
+								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+							</div>
+	                        </div>
+                            
                         </div>
                     </div>
                 </div>
