Improvements to slider copy for mobile

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,7 +9,7 @@
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 						</div>
@@ -28,8 +28,7 @@
 							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer.</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 						</div>
                         </div>
@@ -43,12 +42,11 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br> to stream <span>IP cameras</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam supports most IP cameras, because it works with RTSP, HTTP(s) and RTMP, and makes bad web apps a nightmare from the past.</p>
+							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br>for most <span>IP cameras</span></h1>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with almost any IP camera, because it works with standard protocols such as RTSP, HTTP(s) and RTMP.</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
-	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						
+	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
 								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 							</div>
 	                        </div>
