Tweaks to slider for button width

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -11,7 +11,7 @@
 							<div class="call-to-action white-text">
                             <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
 						</div>
@@ -29,7 +29,7 @@
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
                             <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
                         </div>
@@ -47,7 +47,7 @@
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
 	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
-								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 							</div>
 	                        </div>
                             
