--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -6,11 +6,10 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
                             <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>Pre-launch <span>Media Kit</span></h1>
-                            <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming soon. Here's what you need to know to decide if you want to write about it.</p>
+                            <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming in mid-March. Here's what you need to know to decide if you want to cover it</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
-						
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
@@ -25,10 +24,10 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM 3<br>with <span>multi-windows</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer.</p>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
@@ -43,10 +42,10 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br>for most <span>IP cameras</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with almost any IP camera, because it works with standard protocols such as RTSP, HTTP(s) and RTMP.</p>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with almost any IP camera, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
-	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 							</div>
 	                        </div>
