Added missing links

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-xl-12 text-center">
                 <div class="call-to-action white-text">
-                    <h3>See GlanceCam in action, even if you don't own an IP camera:<br>this Press version embeds sample videos, making testing fast</h3>
+                    <h3>See GlanceCam in action, even if you don't own an IP camera:<br>this Press version with sample videos makes testing fast</h3>
                     <div class="call-to-action">
-                        <a href="#" class="btn">download app</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://vimeo.com/517800053" class="btn video-view">&nbsp;watch video&nbsp;</a>
+                        <a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip" class="btn">download app</a>&nbsp;&nbsp;
+						<a href="https://vimeo.com/517800053" class="btn video-view">watch video</a>
                     </div>
                 </div>
             </div>
