--- a/_includes/future-and-contacts.html
+++ b/_includes/future-and-contacts.html
@@ -17,8 +17,8 @@
                 </div>
                 <div class="about-content">
                     <p>
-						<a href="#">Download GlanceCam test version for the Press</a><br>
-						<a href="#">Download Press assets and informations</a><br><br>
+						<a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip">Download GlanceCam Press version with embedded videos</a><br>
+						<a href="https://cdf1982.com/glancecam-mediakit/glancecam3-media-kit.zip">Download Press assets and informations</a><br><br>
 						<a href="https://www.youtube.com/watch?v=sTU72gGfhJo">GlanceCam App Store video on YouTube</a><br>
 						<a href="https://vimeo.com/517800053">GlanceCam App Store video on Vimeo</a><br><br>
 						
