--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,7 +9,7 @@
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming in mid-March. Here's what you need to know to decide if you want to cover it</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
+                            <a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
@@ -27,7 +27,7 @@
 							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
+                            <a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
@@ -45,7 +45,7 @@
 							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with almost any IP camera, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
-	                            <a href="#" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
+	                            <a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
 								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 							</div>
 	                        </div>
