Updated DL link and tweaked copy

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -5,7 +5,7 @@
                 <div class="call-to-action white-text">
                     <h3>See GlanceCam in action, even if you don't own an IP camera:<br>this Press version with sample videos makes testing fast</h3>
                     <div class="call-to-action">
-                        <a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip" class="btn">download app</a>&nbsp;&nbsp;
+                        <a href="https://www.dropbox.com/s/13z30gj26a10ktr/glancecam3-press-version.zip?dl=1" class="btn">download app</a>&nbsp;&nbsp;
 						<a href="https://vimeo.com/517800053" class="btn video-view">watch video</a>
                     </div>
                 </div>
