--- a/_includes/glancecam3.html
+++ b/_includes/glancecam3.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="about-content">
                     <p>
-						<b>GlanceCam Pro is a new tier introduced in version 3 and is designed for Users with advanced requirements</b>, who have inspired and asked for its features.<br><br>It is available either as a yearly subscription at $ 8.99 or as a life-time in-app purchase at $ 22.99; both purchasing methods are available since some Users strongly prefer one option over the other, but they all unlock the same feature set:<br><br>
+						<b>GlanceCam Pro is a new tier introduced in version 3 and is designed for Users with advanced requirements</b>, who have inspired and asked for its features.<br><br>It is offered either as a yearly subscription at $ 8.99 or as a life-time in-app purchase at $ 22.99; both purchasing methods are available since some Users strongly prefer one option over the other, but they all unlock the same feature set:<br><br>
 						• <b>Multi-windows support</b>, which allows to open, resize and arrange as many windows as needed, remembering their configuration between sessions.<br><br>
 						• An optional <b>minimalistic user interface</b> that removes everything but the video stream when the app is not actively interacted with.<br><br>
 						• The ability to <b>force a custom aspect-ratio</b>, for non standard streams such as horizontally compressed ones or vertical cameras.<br><br>
