--- a/_includes/future-and-contacts.html
+++ b/_includes/future-and-contacts.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="about-content">
                     <p>
-						<a href="https://cdf1982.com/glancecam-mediakit/glancecam3-press-version-with-embedded-videos.zip">Download GlanceCam Press version with embedded videos</a><br>
+						<a href="https://www.dropbox.com/s/13z30gj26a10ktr/glancecam3-press-version.zip?dl=1">Download GlanceCam Press version (notarized)</a><br>
 						<a href="https://cdf1982.com/glancecam-mediakit/glancecam3-media-kit.zip">Download Press assets and informations</a><br><br>
 						<a href="https://www.youtube.com/watch?v=sTU72gGfhJo">GlanceCam App Store video on YouTube</a><br>
 						<a href="https://vimeo.com/517800053">GlanceCam App Store video on Vimeo</a><br><br>
