Transformed MediaKit in actual website

--- a/_includes/call_to_action2.html
+++ b/_includes/call_to_action2.html
@@ -1,9 +1,9 @@
-<section class="cta-area" style="background-image:url({{site.baseurl}}/assets/img/glancecam/calltoaction-bg.jpg);">
+<section class="cta-area" style="background-image:url({{site.baseurl}}/assets/img/glancecam/calltoaction2-bg.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-xl-12 text-center">
                 <div class="call-to-action white-text">
-                    <h3>Forget the old, clunky web apps and plugins:<br>DOWNLOAD GLANCECAM NOW</h3>
+                    <h3>If you've read this far (thank you!),<br>it's really time to TRY GLANCECAM!</h3>
                     <div class="call-to-action">
                     </div>
                 </div>
