--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -5,12 +5,12 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>Pre-launch <span>Media Kit</span></h1>
-                            <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to a beloved IP camera viewer for Mac is coming in mid-March. Here's what you need to know to decide if you want to cover it</p>
+                            <h1 data-animation="fadeInDown" data-delay=".2s">GLANCECAM 3<br>View all your<span> IP cameras</span></h1>
+                            <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to the beloved IP camera viewer for Mac just arrived with lots of new and advanced features!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="https://www.dropbox.com/s/13z30gj26a10ktr/glancecam3-press-version.zip?dl=1" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
+                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 						</div>
                         </div>
 						</div>
@@ -24,11 +24,11 @@
                     <div class="col-xl-12">
                         <div class="slider-content">
 							<h1 data-animation="fadeInUp" data-delay=".2s">GLANCECAM PRO<br>with <span>multi-windows</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 30, so much nicer!</p>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 50, so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="https://www.dropbox.com/s/13z30gj26a10ktr/glancecam3-press-version.zip?dl=1" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
+                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 						</div>
                         </div>
                         </div>
@@ -41,12 +41,12 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="slider-content">
-							<h1 data-animation="fadeInUp" data-delay=".2s">The native solution<br>for most <span>IP cameras</span></h1>
-							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with almost any IP camera, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
+							<h1 data-animation="fadeInUp" data-delay=".2s">"Finally, a cam<br>viewer that <span>works!"</span></h1>
+							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with most IP cameras, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
-	                            <a href="https://www.dropbox.com/s/13z30gj26a10ktr/glancecam3-press-version.zip?dl=1" class="btn" data-animation="fadeInUp" data-delay=".6s">Download app</a>&nbsp;&nbsp;
-								<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
+	                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
 							</div>
 	                        </div>
                             
