--- a/_includes/call_to_action2.html
+++ b/_includes/call_to_action2.html
@@ -13,7 +13,7 @@
 	
 	<p style="text-align:center">
 		<a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12" class="image" target="new">
-			<img src="{{site.url}}/glancecam/assets/img/download_mac_app_store_white_bg.svg" alt="Download on the Mac App Store" data-position="center center" />
+			<img src="{{site.baseurl}}/assets/img/download_mac_app_store_white_bg.svg" alt="Download on the Mac App Store" data-position="center center" />
 		</a>
 	</p>
 </section>
