Fixed Logo and App Store on small devices
https://getbootstrap.com/docs/4.0/layout/grid/

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
     <div id="sticky-header" class="menu-area">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-6 col-lg-2 col-md-3 col-sm-5">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                     <div class="logo">
                         <a href="https://cdf1982.com"><img src="https://cdf1982.com/glancecam/assets/img/logo/logo.png" class="img-fluid" alt=""></a><b> GlanceCam</b>
                     </div>
                 </div>
-				<div class="col-xl-6 col-lg-2 col-md-3 col-sm-5 text-right">
+				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-right">
                     <div class="logo">
-                        <a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12"><img src="{{site.baseurl}}/assets/img/download_mac_app_store_black_bg.svg" class="img-fluid" alt=""></a>
+                        <a href="https://itunes.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896?l=it&ls=1&mt=12"><img src="{{site.baseurl}}/assets/img/download_mac_app_store_black_bg.svg" class="img-fluid" alt="Download on the Mac App Store"></a>
                     </div>
             </div>
             <div class="offcanvas-overly"></div>
