Changed button titles for width

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,8 +9,8 @@
                             <p data-animation="fadeInLeft" data-delay=".4s">The biggest update yet to the beloved IP camera viewer for Mac just arrived with lots of new and advanced features!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
 						</div>
@@ -27,8 +27,8 @@
 							                            <p data-animation="fadeInLeft" data-delay=".4s">IP cameras are inexpensive and more people buy them every day. GlanceCam makes the experience of streaming one, or 50, so much nicer!</p>
 							<div class="col-xl-12 text-center">
 							<div class="call-to-action white-text">
-                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 						</div>
                         </div>
                         </div>
@@ -45,8 +45,8 @@
 							                            <p data-animation="fadeInLeft" data-delay=".4s">GlanceCam is compatible with most IP cameras, because it works with standard protocols such as RTSP, HTTP(s) and RTMP</p>
 								<div class="col-xl-12 text-center">
 								<div class="call-to-action white-text">
-	                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">Mac App Store</a>&nbsp;&nbsp;
-							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">&nbsp;Watch video&nbsp;</a>
+                            <a href="https://apps.apple.com/us/app/glancecam-ip-webcam-viewer/id1360797896" class="btn" data-animation="fadeInUp" data-delay=".6s">&nbsp;Download&nbsp;</a>&nbsp;&nbsp;
+							<a href="https://vimeo.com/517800053" class="btn video-view" data-animation="fadeInUp" data-delay=".6s">Watch video</a>
 							</div>
 	                        </div>
                             
