--- a/_includes/details-and-contacts.html
+++ b/_includes/details-and-contacts.html
@@ -11,11 +11,9 @@
 						• Mount webcams in your living room, kitchen and garden to check on your cat when you're away, maybe turning on a light at night or taking a snapshot when kitty does something funny.<br><br>
 						• Point a camera at your front gate and let visitors in by activating a network relay.<br><br>
 						<b>GlanceCam is a bit nerdy</b>, but very useful if you want to take full advantage of cheap webcams.<br>It can stream cameras on your LAN or via Internet and, while <b>it's not the most "works out-of-the-box" app to configure (<a href="{{ site.baseurl }}/faqs#setup">you'll need some knowledge about your network and cameras</a>: IP address, username, password and the string format required to stream your specific camera model)</b>, it's very flexible and brand-agnostic; please, check the requirements section, and don't hesitate to <a href="mailto:support@cdf1982.com">ask me a question</a> before purchasing.<br><br>
-						<b>Please be advised that GlanceCam is designed for realtime playback and DOES NOT support DVRs / NVRs, proprietary cloud services, recording (nor playback of recordings), motion detection and pan & tilt (PTZ) control</b>.
+						<b>Please be advised that GlanceCam is designed for realtime playback and DOES NOT support DVRs / NVRs, proprietary cloud services, recording (nor playback of recordings), motion detection and pan & tilt (PTZ) control</b>.<br><br><br><br>
 					</p>
                 </div>
-				
-				<br><br><br>
                
                <div class="section-title">
                    <h2>Requirements</h2>
@@ -27,13 +25,11 @@
 					• Any Mac running the supported operating systems should have plenty of power to stream IP cameras with GlanceCam, but multiple streams, high resolutions or lots of cameras open at the same time will require faster computers.<br><br>
 					• A solid connection between your computer and the cameras, be it LAN or WiFi, is recommended both for performances and stability, especially if you want many cameras to stream at the same time.<br><br>
 					• For triggering actions by pressing the <a href="{{ site.baseurl }}/faqs#actions">customizable buttons</a>, you'll need devices or appliances that can react to HTTP GET requests.<br><br>
-					• To stream over the Internet, you'll need a static public IP address or a dynamic DNS service and to configure port forwarding for each camera and, optionally, action button; I recommend to start testing the video stream in LAN to check the compatibility before digging into remote connections; learn more <a href="{{ site.baseurl }}/faqs#remote">here</a>.
+					• To stream over the Internet, you'll need a static public IP address or a dynamic DNS service and to configure port forwarding for each camera and, optionally, action button; I recommend to start testing the video stream in LAN to check the compatibility before digging into remote connections; learn more <a href="{{ site.baseurl }}/faqs#remote">here</a>.<br><br><br>
                    </p>
                </div>    
-				
-				<br><br><br>
-				
             </div>
+			
             <div class="col-xl-6 col-lg-6 mb-20">
 				
                 <div class="section-title">
@@ -47,12 +43,10 @@
 						• The app shows one camera at a time in a single window, and you can switch between cameras inside that window; upgrading to GlanceCam Pro will allow to open as many windows as you need.<br><br>
 						• For every camera, you can also configure up to 2 optional buttons, visible when you hover your mouse on the app window, to <a href="{{ site.baseurl }}/faqs#automation">perform actions via customizable HTTP GET request URLs.</a><br><br>
 						• GlanceCam's window can be configured to be <b>'Always on top' and visible in every Space</b>, or even 'Behind everything', at the level of your Desktop; the app can <b>optionally auto-launch at login</b>.<br><br>
-						• GlanceCam offers many <b><a href="{{ site.baseurl }}/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="{{ site.baseurl }}/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.
+						• GlanceCam offers many <b><a href="{{ site.baseurl }}/faqs#shortcuts">keyboard shortcuts</a></b> and is great for automation: it has a <a href="{{ site.baseurl }}/faqs#automation">URL scheme and supports Apple Script</a> for switching cameras and toggling full-screen mode; you can even control it from your MacBook's TouchBar.<br><br><br><br>
 					</p>
                 </div>
-				
-				<br><br><br>
-				
+		
                 <div class="section-title">
                     <h2>Links</h2>
                 </div>
@@ -62,11 +56,9 @@
  					<a href="https://cdf1982.com/glancecam/faqs">Frequently Asked Questions</a><br>
  					<a href="https://cdf1982.com/glancecam/glancecam-release-notes">Release Notes</a><br>
  					<a href="https://cdf1982.com/tag/glancecam">GlanceCam Blog on cdf1982.com</a><br><br>
- 					<a href="https://cdf1982.com/glancecam-mediakit">From the Press 😍? Here's the Media Kit</a>
+ 					<a href="https://cdf1982.com/glancecam-mediakit">From the Press 😍? Here's the Media Kit</a><br><br><br><br>
                     </p>
                 </div>
-				
-				<br><br><br>
 				
                 <div class="section-title">
                     <h2>Contact informations</h2>
