--- a/_includes/glancecam3.html
+++ b/_includes/glancecam3.html
@@ -14,7 +14,7 @@
 						• It's now possible to send a camera to the same level of macOS background, behind all apps and icons, so that it remains always available in the most unobtrusive way possible. A bit hacky and nerdy, but often asked for!<br><br>
 						• Lots of <b><a href="{{ site.baseurl }}/faqs#shortcuts">new keyboard shortcuts</a></b> have been added.<br><br>
 						• Improved auto-generated email reports when requesting support or providing feedback.<br><br>
-						• GlanceCam 3 rocks a <b>new, stunning app icon</b> designed by <a href="https://beckyhansmeyer.com">Becky Hansmeyer</a>.<br><br>
+						• GlanceCam 3 rocks a <b>new, stunning app icon</b> designed by <a href="https://beckyhansmeyer.com">Becky Hansmeyer</a>.<br><br><br>
                     </p>
                 </div>
             </div>
