Better CTAs for mobile

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-12 text-center">
                 <div class="call-to-action white-text">
-                    <h3>Forget the old, clunky web apps and plugins:<br>DOWNLOAD GLANCECAM NOW</h3>
+                    <h3>Forget clunky web apps and plugins:<br><br>DOWNLOAD GLANCECAM NOW<br></h3>
                     <div class="call-to-action">
                     </div>
                 </div>
